[gd_scene load_steps=2 format=3 uid="uid://j2c1ogpgbnwv"]

[ext_resource type="Script" uid="uid://cqv2nlxf5kmcx" path="res://scenes/authentication/auth_controller.gd" id="1_ecdr6"]

[node name="AuthScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ecdr6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="EmailInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Login"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="ErrorPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ErrorPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
